# terram4kc

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CONTRIBUTORS.md  README.md  TODO.md  m4kc.desktop
android/: README.txt  local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/com/rmcvxzz/mcvoxel/: MainActivity.java
android/app/src/main/jni/: Android.mk  Application.mk
docs/: ARGUMENTS.md  ROADMAP.md  TODO.md
glad/include/glad/: glad.h
glad/src/: glad.c
lang/: en.lang  en.yaml  id.lang  id.yaml  pl.lang
old/: build.sh
src/: audio.c  audio.h  discord_presence.c  discord_presence.h  gameloop.c  gameloop.h  gl_renderer.c  gl_renderer.h  gui.c  imgui_renderer.cpp  imgui_renderer.h  inputbuffer.c  loc.c  loc.h  main.c  main.h  mcpi.c  mcpi.h  menus.c  menus.h  net.c  net.h  options.c  options.h  player_model.c  player_model.h
src/android/: dpad.h
win/SDL2_net/lib/: libSDL2_net.la
win/SDL2_net/lib/cmake/SDL2_net/: sdl2_net-config-version.cmake  sdl2_net-config.cmake
win/SDL2_net/lib/pkgconfig/: SDL2_net.pc
